add new brew formulas

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -9,27 +9,32 @@ tap "caskroom/fonts"
 tap "caskroom/versions"
 tap "caskroom/cask"
 tap "bramstein/webfonttools"
-
 brew "ack"
+brew "autoconf"
+brew "automake"
 brew "bash"
 brew "bash-completion@2"
 brew "brew-cask-completion"
 brew "coreutils"
 brew "docker-machine-nfs"
 brew "exiftool"
+brew "git"
+brew "ffmpeg"
 brew "findutils", args: ["with-default-names"]
 brew "fish"
-brew "git"
 brew "git-lfs"
 brew "gnu-sed", args: ["with-default-names"]
 brew "grep"
+brew "hub"
 brew "libtool"
-brew "imagemagick", args: ["with-webp"]
+brew "imagemagick"
+brew "libksba"
+brew "libyaml"
 brew "moreutils"
-brew "node"
 brew "openssh"
 brew "rename"
 brew "ssh-copy-id"
+brew "terminal-notifier"
 brew "tree"
 brew "vim", args: ["with-override-system-vi"]
 brew "wget"
@@ -40,6 +45,5 @@ brew "bramstein/webfonttools/sfnt2woff-zopfli"
 brew "bramstein/webfonttools/woff2"
 brew "homebrew/php/composer"
 brew "homebrew/php/php72"
-brew "hub"
-
+brew "mas"
 cask "caskroom/fonts/font-fira-code"
