--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -4,13 +4,13 @@
   "prettier.singleQuote": true,
   "prettier.typescriptEnable": ["typescript", "typescriptreact"],
   "prettier.eslintIntegration": true,
+  "material-icon-theme.folders.theme": "classic",
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
   "terminal.integrated.shell.osx": "/usr/local/bin/fish",
   "terminal.integrated.cursorBlinking": true,
   "workbench.startupEditor": "none",
   "window.zoomLevel": 0,
-  "prettier.cssEnable": ["css", "scss"],
   "git.confirmSync": false,
   "git.enableSmartCommit": true,
   "editor.minimap.enabled": false,
@@ -22,5 +22,6 @@
   "editor.fontFamily": "Fira Code, Menlo, Monaco, 'Courier New', monospace",
   "importCost.largePackageColor": "#f07178",
   "importCost.mediumPackageColor": "#ffcb6b",
-  "importCost.smallPackageColor": "#c3e88d"
+  "importCost.smallPackageColor": "#c3e88d",
+  "workbench.iconTheme": "material-icon-theme"
 }
