Update vscode config

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -24,5 +24,16 @@
   "importCost.mediumPackageColor": "#ffcb6b",
   "importCost.smallPackageColor": "#c3e88d",
   "workbench.iconTheme": "material-icon-theme",
-  "explorer.confirmDragAndDrop": false
+  "explorer.confirmDragAndDrop": false,
+  "gitlens.advanced.messages": {
+    "suppressCommitHasNoPreviousCommitWarning": false,
+    "suppressCommitNotFoundWarning": false,
+    "suppressFileNotUnderSourceControlWarning": false,
+    "suppressGitVersionWarning": false,
+    "suppressLineUncommittedWarning": false,
+    "suppressNoRepositoryWarning": false,
+    "suppressUpdateNotice": false,
+    "suppressWelcomeNotice": true
+  },
+  "git.autofetch": true
 }
