Add update script to repository

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -18,10 +18,10 @@ brew "brew-cask-completion"
 brew "coreutils"
 brew "docker-machine-nfs"
 brew "exiftool"
-brew "git"
 brew "ffmpeg"
 brew "findutils", args: ["with-default-names"]
 brew "fish"
+brew "git"
 brew "git-lfs"
 brew "gnu-sed", args: ["with-default-names"]
 brew "grep"
@@ -30,13 +30,17 @@ brew "libtool"
 brew "imagemagick"
 brew "libksba"
 brew "libyaml"
+brew "lynx"
+brew "mas"
 brew "moreutils"
 brew "openssh"
+brew "php"
 brew "rename"
 brew "ssh-copy-id"
 brew "terminal-notifier"
 brew "tree"
-brew "vim", args: ["with-override-system-vi"]
+brew "vim"
+brew "watchman"
 brew "wget"
 brew "yarn"
 brew "zopfli"
@@ -44,6 +48,8 @@ brew "bramstein/webfonttools/sfnt2woff"
 brew "bramstein/webfonttools/sfnt2woff-zopfli"
 brew "bramstein/webfonttools/woff2"
 brew "homebrew/php/composer"
-brew "homebrew/php/php72"
-brew "mas"
+cask "java"
 cask "caskroom/fonts/font-fira-code"
+mas "Pages", id: 409201541
+mas "Slack", id: 803453959
+mas "Xcode", id: 497799835
