--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -15,6 +15,7 @@ brew "automake"
 brew "bash"
 brew "bash-completion@2"
 brew "brew-cask-completion"
+brew "composer"
 brew "coreutils"
 brew "docker-machine-nfs"
 brew "exiftool"
@@ -33,6 +34,7 @@ brew "libyaml"
 brew "lynx"
 brew "mas"
 brew "moreutils"
+brew "node"
 brew "openssh"
 brew "php"
 brew "rename"
@@ -47,7 +49,7 @@ brew "zopfli"
 brew "bramstein/webfonttools/sfnt2woff"
 brew "bramstein/webfonttools/sfnt2woff-zopfli"
 brew "bramstein/webfonttools/woff2"
-brew "homebrew/php/composer"
+cask "insomnia"
 cask "java"
 cask "caskroom/fonts/font-fira-code"
 mas "Pages", id: 409201541
