Update homebrew packages

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,13 +1,13 @@
 tap "buo/cask-upgrade"
 tap "homebrew/dupes"
 tap "homebrew/completions"
+tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/php"
 tap "homebrew/versions"
+tap "homebrew/cask"
 tap "homebrew/bundle"
-tap "caskroom/fonts"
-tap "caskroom/versions"
-tap "caskroom/cask"
+tap "homebrew/cask-fonts"
 tap "bramstein/webfonttools"
 brew "ack"
 brew "autoconf"
@@ -34,14 +34,15 @@ brew "libyaml"
 brew "lynx"
 brew "mas"
 brew "moreutils"
-brew "node", link: false
-brew "node@8", link: true
+brew "node"
+brew "node@8"
 brew "openssh"
 brew "php"
 brew "rename"
 brew "ssh-copy-id"
 brew "terminal-notifier"
 brew "tree"
+brew "unrar"
 brew "vim"
 brew "watchman"
 brew "wget"
@@ -52,7 +53,7 @@ brew "bramstein/webfonttools/sfnt2woff-zopfli"
 brew "bramstein/webfonttools/woff2"
 cask "insomnia"
 cask "java"
-cask "caskroom/fonts/font-fira-code"
+cask "homebrew/cask-fonts/font-fira-code"
 mas "Pages", id: 409201541
 mas "Slack", id: 803453959
 mas "Xcode", id: 497799835
