Update vscode config

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,25 +1,31 @@
 {
-  "workbench.colorTheme": "Material Theme Palenight",
-  "prettier.singleQuote": true,
-  "prettier.eslintIntegration": true,
-  "editor.formatOnSave": true,
+  "docker.showExplorer": false,
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": false
+  },
+  "editor.cursorBlinking": "phase",
+  "editor.cursorWidth": 0,
+  "editor.folding": false,
+  "editor.fontFamily": "Fira Code, Menlo, Monaco, 'Courier New', monospace",
+  "editor.fontLigatures": true,
   "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
+  "editor.hideCursorInOverviewRuler": true,
+  "editor.lineHeight": 20,
+  "editor.lineNumbers": "off",
+  "editor.matchBrackets": false,
+  "editor.minimap.enabled": false,
+  "editor.overviewRulerBorder": false,
+  "editor.renderIndentGuides": false,
+  "editor.renderLineHighlight": "none",
+  "editor.renderWhitespace": "none",
+  "explorer.confirmDragAndDrop": false,
+  "explorer.openEditors.visible": 0,
+  "extensions.showRecommendationsOnlyOnDemand": true,
   "files.autoSave": "onFocusChange",
-  "terminal.integrated.shell.osx": "/usr/local/bin/fish",
-  "terminal.integrated.cursorBlinking": true,
-  "workbench.startupEditor": "none",
-  "window.zoomLevel": 0,
+  "git.autofetch": true,
   "git.confirmSync": false,
   "git.enableSmartCommit": true,
-  "editor.minimap.enabled": false,
-  "docker.showExplorer": false,
-  "editor.fontLigatures": true,
-  "editor.fontFamily": "Fira Code, Menlo, Monaco, 'Courier New', monospace",
-  "importCost.largePackageColor": "#f07178",
-  "importCost.mediumPackageColor": "#ffcb6b",
-  "importCost.smallPackageColor": "#c3e88d",
-  "workbench.iconTheme": "eq-material-theme-icons",
-  "explorer.confirmDragAndDrop": false,
   "gitlens.advanced.messages": {
     "suppressCommitHasNoPreviousCommitWarning": false,
     "suppressCommitNotFoundWarning": false,
@@ -32,12 +38,31 @@
     "suppressUpdateNotice": false,
     "suppressWelcomeNotice": true
   },
-  "git.autofetch": true,
+  "gitlens.codeLens.enabled": false,
+  "gitlens.defaultDateFormat": "MMM Mo YYYY, HH:MM",
+  "gitlens.gitExplorer.enabled": false,
+  "gitlens.historyExplorer.enabled": true,
+  "gitlens.historyExplorer.location": "scm",
+  "gitlens.hovers.currentLine.enabled": false,
+  "gitlens.hovers.currentLine.over": "line",
   "gitlens.keymap": "alternate",
+  "gitlens.mode.statusBar.enabled": false,
+  "gitlens.resultsExplorer.location": "scm",
+  "gitlens.statusBar.enabled": false,
+  "importCost.largePackageColor": "#f07178",
+  "importCost.mediumPackageColor": "#ffcb6b",
+  "importCost.smallPackageColor": "#c3e88d",
   "jest.autoEnable": false,
-  "material-icon-theme.folders.theme": "classic",
+  "prettier.eslintIntegration": true,
+  "prettier.singleQuote": true,
   "terminal.external.osxExec": "iTerm.app",
-  "editor.codeActionsOnSave": {
-    "source.organizeImports": false
-  }
+  "terminal.integrated.cursorBlinking": true,
+  "terminal.integrated.shell.osx": "/usr/local/bin/fish",
+  "window.zoomLevel": 0,
+  "workbench.activityBar.visible": false,
+  "workbench.colorTheme": "Raijū - Subliminal",
+  "workbench.editor.showIcons": false,
+  "workbench.iconTheme": null,
+  "workbench.startupEditor": "none",
+  "workbench.statusBar.visible": false
 }
