Add fnm as nvm replacement

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,14 +1,12 @@
+tap "bramstein/webfonttools"
 tap "buo/cask-upgrade"
-tap "homebrew/dupes"
-tap "homebrew/completions"
+tap "caskformula/caskformula"
+tap "homebrew/bundle"
+tap "homebrew/cask"
+tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
-tap "homebrew/php"
-tap "homebrew/versions"
-tap "homebrew/cask"
-tap "homebrew/bundle"
-tap "homebrew/cask-fonts"
-tap "bramstein/webfonttools"
+cask "java"
 brew "ack"
 brew "autoconf"
 brew "automake"
@@ -22,23 +20,26 @@ brew "exiftool"
 brew "ffmpeg"
 brew "findutils", args: ["with-default-names"]
 brew "fish"
+brew "libtool"
+brew "fswatch"
 brew "git"
 brew "git-lfs"
 brew "gnu-sed", args: ["with-default-names"]
 brew "grep"
 brew "hub"
-brew "libtool"
 brew "imagemagick"
+brew "kubernetes-cli"
+brew "kubectx"
 brew "libksba"
 brew "libyaml"
 brew "lynx"
 brew "mas"
 brew "moreutils"
-brew "node"
-brew "node@8"
 brew "openssh"
 brew "php"
 brew "rename"
+brew "rustup-init"
+brew "sbt"
 brew "ssh-copy-id"
 brew "terminal-notifier"
 brew "tree"
@@ -46,14 +47,15 @@ brew "unrar"
 brew "vim"
 brew "watchman"
 brew "wget"
-brew "yarn"
 brew "zopfli"
 brew "bramstein/webfonttools/sfnt2woff"
 brew "bramstein/webfonttools/sfnt2woff-zopfli"
 brew "bramstein/webfonttools/woff2"
+cask "font-fira-code"
 cask "insomnia"
-cask "java"
-cask "homebrew/cask-fonts/font-fira-code"
+mas "1Password 7", id: 1333542190
 mas "Pages", id: 409201541
 mas "Slack", id: 803453959
+mas "StatusClock", id: 552792489
+mas "Unsplash Wallpapers", id: 1284863847
 mas "Xcode", id: 497799835
