Tweak VSCode settings

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -9,6 +9,7 @@
   "editor.fontLigatures": true,
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
+  "editor.formatOnSaveTimeout": 1500,
   "editor.hideCursorInOverviewRuler": true,
   "editor.lineHeight": 20,
   "editor.lineNumbers": "off",
@@ -18,10 +19,12 @@
   "editor.renderIndentGuides": false,
   "editor.renderLineHighlight": "gutter",
   "editor.renderWhitespace": "none",
+  "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
   "explorer.decorations.colors": false,
   "explorer.openEditors.visible": 0,
   "extensions.showRecommendationsOnlyOnDemand": true,
+  "files.autoSave": "onFocusChange",
   "git.autofetch": true,
   "git.confirmSync": false,
   "git.enableSmartCommit": true,
@@ -37,11 +40,6 @@
     "suppressUpdateNotice": false,
     "suppressWelcomeNotice": true
   },
-  "workbench.colorCustomizations": {
-    "editorGutter.modifiedBackground": "#6699CC",
-    "editorGutter.addedBackground": "#99C794",
-    "editorGutter.deletedBackground": "#E15A60"
-  },
   "gitlens.codeLens.enabled": false,
   "gitlens.defaultDateFormat": "MMM Mo YYYY, HH:MM",
   "gitlens.gitExplorer.enabled": false,
@@ -56,23 +54,18 @@
   "importCost.largePackageColor": "#f07178",
   "importCost.mediumPackageColor": "#ffcb6b",
   "importCost.smallPackageColor": "#c3e88d",
+  "javascript.implicitProjectConfig.checkJs": true,
+  "javascript.updateImportsOnFileMove.enabled": "always",
   "jest.autoEnable": false,
-  "prettier.eslintIntegration": true,
   "prettier.singleQuote": true,
   "terminal.external.osxExec": "iTerm.app",
   "terminal.integrated.cursorBlinking": true,
   "terminal.integrated.shell.osx": "/usr/local/bin/fish",
-  "window.zoomLevel": 0,
-  "workbench.activityBar.visible": false,
-  "workbench.colorTheme": "Night Owl",
-  "workbench.editor.showIcons": false,
-  "workbench.iconTheme": null,
-  "workbench.startupEditor": "none",
-  "workbench.statusBar.visible": true,
-  "explorer.confirmDelete": false,
   "typescript.updateImportsOnFileMove.enabled": "always",
-  "materialTheme.fixIconsRunning": false,
-  "go.gotoSymbol.includeImports": true,
-  "go.autocompleteUnimportedPackages": true,
-  "files.autoSave": "onFocusChange"
+  "workbench.activityBar.visible": false,
+  "workbench.colorTheme": "SubliminalR",
+  "workbench.editor.showIcons": false,
+  "workbench.iconTheme": "eq-material-theme-icons-ocean",
+  "workbench.settings.editor": "json",
+  "workbench.startupEditor": "none"
 }
