Update vscode/fish config

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -11,6 +11,7 @@
   "editor.formatOnSave": true,
   "editor.formatOnSaveTimeout": 1500,
   "editor.hideCursorInOverviewRuler": true,
+  "editor.cursorSmoothCaretAnimation": true,
   "editor.lineHeight": 20,
   "editor.lineNumbers": "off",
   "editor.matchBrackets": false,
@@ -19,12 +20,18 @@
   "editor.renderIndentGuides": false,
   "editor.renderLineHighlight": "gutter",
   "editor.renderWhitespace": "none",
+  "editor.acceptSuggestionOnCommitCharacter": true,
+  "editor.acceptSuggestionOnEnter": "smart",
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
   "explorer.decorations.colors": false,
   "explorer.openEditors.visible": 0,
+  "diffEditor.renderIndicators": false,
   "extensions.showRecommendationsOnlyOnDemand": true,
   "files.autoSave": "onFocusChange",
+  "files.trimFinalNewlines": true,
+  "files.trimTrailingWhitespace": true,
+  "files.insertFinalNewline": true,
   "git.autofetch": true,
   "git.confirmSync": false,
   "git.enableSmartCommit": true,
@@ -42,14 +49,10 @@
   },
   "gitlens.codeLens.enabled": false,
   "gitlens.defaultDateFormat": "MMM Mo YYYY, HH:MM",
-  "gitlens.gitExplorer.enabled": false,
-  "gitlens.historyExplorer.enabled": true,
-  "gitlens.historyExplorer.location": "scm",
   "gitlens.hovers.currentLine.enabled": false,
   "gitlens.hovers.currentLine.over": "line",
   "gitlens.keymap": "alternate",
   "gitlens.mode.statusBar.enabled": false,
-  "gitlens.resultsExplorer.location": "scm",
   "gitlens.statusBar.enabled": false,
   "importCost.largePackageColor": "#f07178",
   "importCost.mediumPackageColor": "#ffcb6b",
@@ -61,11 +64,21 @@
   "terminal.external.osxExec": "iTerm.app",
   "terminal.integrated.cursorBlinking": true,
   "terminal.integrated.shell.osx": "/usr/local/bin/fish",
-  "typescript.updateImportsOnFileMove.enabled": "always",
+  "typescript.updateImportsOnFileMove.enabled": "never",
   "workbench.activityBar.visible": false,
   "workbench.colorTheme": "SubliminalR",
   "workbench.editor.showIcons": false,
   "workbench.iconTheme": "eq-material-theme-icons-ocean",
   "workbench.settings.editor": "json",
-  "workbench.startupEditor": "none"
+  "workbench.startupEditor": "none",
+  "workbench.statusBar.feedback.visible": false,
+  "window.zoomLevel": 0,
+  "gitlens.views.repositories.enabled": false,
+  "gitlens.views.fileHistory.enabled": true,
+  "gitlens.views.fileHistory.location": "scm",
+  "gitlens.views.lineHistory.enabled": true,
+  "gitlens.views.lineHistory.location": "scm",
+  "gitlens.views.compare.location": "scm",
+  "gitlens.views.search.location": "scm",
+  "search.usePCRE2": true
 }
