--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -23,6 +23,7 @@
   "explorer.confirmDragAndDrop": false,
   "explorer.decorations.colors": false,
   "explorer.openEditors.visible": 0,
+  "terminal.integrated.scrollback": 5000,
   "extensions.showRecommendationsOnlyOnDemand": true,
   "files.autoSave": "onFocusChange",
   "git.autofetch": true,
@@ -42,14 +43,10 @@
   },
   "gitlens.codeLens.enabled": false,
   "gitlens.defaultDateFormat": "MMM Mo YYYY, HH:MM",
-  "gitlens.gitExplorer.enabled": false,
-  "gitlens.historyExplorer.enabled": true,
-  "gitlens.historyExplorer.location": "scm",
   "gitlens.hovers.currentLine.enabled": false,
   "gitlens.hovers.currentLine.over": "line",
   "gitlens.keymap": "alternate",
   "gitlens.mode.statusBar.enabled": false,
-  "gitlens.resultsExplorer.location": "scm",
   "gitlens.statusBar.enabled": false,
   "importCost.largePackageColor": "#f07178",
   "importCost.mediumPackageColor": "#ffcb6b",
@@ -63,9 +60,10 @@
   "terminal.integrated.shell.osx": "/usr/local/bin/fish",
   "typescript.updateImportsOnFileMove.enabled": "always",
   "workbench.activityBar.visible": false,
-  "workbench.colorTheme": "SubliminalR",
   "workbench.editor.showIcons": false,
-  "workbench.iconTheme": "eq-material-theme-icons-ocean",
+  "workbench.iconTheme": "ayu",
   "workbench.settings.editor": "json",
-  "workbench.startupEditor": "none"
+  "workbench.startupEditor": "none",
+  "workbench.colorTheme": "Material Theme Palenight High Contrast",
+  "workbench.colorCustomizations": {}
 }
