Update fish settings

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,6 +1,5 @@
 tap "bramstein/webfonttools"
 tap "buo/cask-upgrade"
-tap "caskformula/caskformula"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-fonts"
@@ -18,13 +17,13 @@ brew "coreutils"
 brew "docker-machine-nfs"
 brew "exiftool"
 brew "ffmpeg"
-brew "findutils", args: ["with-default-names"]
+brew "findutils"
 brew "fish"
 brew "libtool"
 brew "fswatch"
 brew "git"
 brew "git-lfs"
-brew "gnu-sed", args: ["with-default-names"]
+brew "gnu-sed"
 brew "grep"
 brew "hub"
 brew "imagemagick"
