--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,3 +1,4 @@
+tap "adoptopenjdk/openjdk"
 tap "bramstein/webfonttools"
 tap "buo/cask-upgrade"
 tap "homebrew/bundle"
@@ -5,40 +6,66 @@ tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
-cask "java"
 brew "ack"
 brew "autoconf"
 brew "automake"
 brew "bash"
 brew "bash-completion@2"
 brew "brew-cask-completion"
+brew "brew-php-switcher"
+brew "libffi"
+brew "glib"
+brew "cmake"
 brew "composer"
 brew "coreutils"
+brew "curl"
+brew "jansson"
 brew "docker-machine-nfs"
 brew "exiftool"
+brew "libogg"
+brew "opus"
 brew "ffmpeg"
 brew "findutils"
 brew "fish"
 brew "libtool"
 brew "fswatch"
+brew "gengetopt"
 brew "git"
 brew "git-lfs"
+brew "glib-openssl"
 brew "gnu-sed"
+brew "gradle"
 brew "grep"
 brew "hub"
 brew "imagemagick"
+brew "openssl"
+brew "usbmuxd", args: ["HEAD"]
+brew "libimobiledevice", args: ["HEAD"]
+brew "ios-webkit-debug-proxy", args: ["HEAD"]
+brew "jq"
 brew "kubernetes-cli"
 brew "kubectx"
+brew "libconfig"
 brew "libksba"
+brew "libmicrohttpd"
+brew "libnice"
+brew "libusrsctp"
+brew "libwebsockets"
 brew "libyaml"
 brew "lynx"
 brew "mas"
 brew "moreutils"
 brew "openssh"
 brew "php"
+brew "pkg-config"
+brew "rabbitmq-c"
+brew "rbenv"
 brew "rename"
+brew "ruby"
 brew "rustup-init"
 brew "sbt"
+brew "sofia-sip"
+brew "srtp"
 brew "ssh-copy-id"
 brew "terminal-notifier"
 brew "tree"
@@ -46,13 +73,20 @@ brew "unrar"
 brew "vim"
 brew "watchman"
 brew "wget"
+brew "yarn"
 brew "zopfli"
 brew "bramstein/webfonttools/sfnt2woff"
 brew "bramstein/webfonttools/sfnt2woff-zopfli"
 brew "bramstein/webfonttools/woff2"
 cask "font-fira-code"
 cask "insomnia"
+cask "java"
 mas "1Password 7", id: 1333542190
+mas "GarageBand", id: 682658836
+mas "iMovie", id: 408981434
+mas "Keynote", id: 409183694
+mas "Lightweight PDF", id: 1450640351
+mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Slack", id: 803453959
 mas "StatusClock", id: 552792489
