🗞Update brew/fish/vscode config

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -9,6 +9,7 @@ tap "homebrew/core"
 brew "ack"
 brew "autoconf"
 brew "automake"
+brew "awscli"
 brew "bash"
 brew "bash-completion@2"
 brew "brew-cask-completion"
@@ -29,17 +30,17 @@ brew "findutils"
 brew "fish"
 brew "libtool"
 brew "fswatch"
+brew "fzf"
 brew "gengetopt"
 brew "git"
 brew "git-lfs"
 brew "glib-openssl"
 brew "gnu-sed"
+brew "go"
 brew "gradle"
 brew "grep"
 brew "hub"
 brew "imagemagick"
-brew "openssl"
-brew "usbmuxd", args: ["HEAD"]
 brew "libimobiledevice", args: ["HEAD"]
 brew "ios-webkit-debug-proxy", args: ["HEAD"]
 brew "jq"
@@ -49,12 +50,14 @@ brew "libconfig"
 brew "libksba"
 brew "libmicrohttpd"
 brew "libnice"
+brew "libusbmuxd", args: ["HEAD"]
 brew "libusrsctp"
 brew "libwebsockets"
 brew "libyaml"
 brew "lynx"
 brew "mas"
 brew "moreutils"
+brew "nginx"
 brew "openssh"
 brew "php"
 brew "pkg-config"
@@ -68,8 +71,10 @@ brew "sofia-sip"
 brew "srtp"
 brew "ssh-copy-id"
 brew "terminal-notifier"
+brew "terraform"
 brew "tree"
 brew "unrar"
+brew "vault"
 brew "vim"
 brew "watchman"
 brew "wget"
@@ -78,6 +83,7 @@ brew "zopfli"
 brew "bramstein/webfonttools/sfnt2woff"
 brew "bramstein/webfonttools/sfnt2woff-zopfli"
 brew "bramstein/webfonttools/woff2"
+cask "1password-cli"
 cask "font-fira-code"
 cask "insomnia"
 cask "java"
